5-Working with SQL Server and Entity Framework Core

--- a/Asp.NetCore Fundamentals/OdeToFood/OdeToFood/OdeToFood/appsettings.json
+++ b/Asp.NetCore Fundamentals/OdeToFood/OdeToFood/OdeToFood/appsettings.json
@@ -7,6 +7,9 @@
     }
   },
   "AllowedHosts": "*",
-  "Message": "Hello from appSettings!"
+  "Message": "Hello from appSettings!",
+  "ConnectionStrings": {
+    "OdeToFoodDb": "Server=localhost,1433;User ID = SA;password=<YourStrong@Passw0rd>;database=OdeToFood;"
+  }
     
 }
