--- a/Asp.NetCore Fundamentals/OdeToFood/OdeToFood/OdeToFood.Core/OdeToFood.Core.csproj
+++ b/Asp.NetCore Fundamentals/OdeToFood/OdeToFood/OdeToFood.Core/OdeToFood.Core.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.4.4" />
+    <PackageReference Include="OdeToCode.UseNodeModules" Version="3.0.0" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0-preview.6.20305.6" />
   </ItemGroup>
 
